Parte 07 - Criado metodo para consulta de pessoas e view

--- a/trab4bim/src/main/webapp/template/header.xhtml
+++ b/trab4bim/src/main/webapp/template/header.xhtml
@@ -9,7 +9,7 @@
 		<p:menubar>
 			<p:menuitem value="Home" icon="ui-icon-home" url="home.xhtml" />
 			<p:menuitem value="Cadastro" icon="ui-icon-document" url="cadastrarPessoa.xhtml" />
-			<p:menuitem value="Consulta" icon="ui-icon-document" />
+			<p:menuitem value="Consulta" icon="ui-icon-document" url="consultarPessoa.xhtml"/>
 			<p:menuitem value="Consulta por Carousel" icon="ui-icon-document" />
 			<p:menuitem value="Gráfico tipo Pessoa" icon="ui-icon-document" />
 			<p:menuitem value="Exportar XML Pessoa" icon="ui-icon-document" />
