Parte 13 - Criado a classe e view para exportar os arquivos em Xml.

--- a/trab4bim/src/main/webapp/template/header.xhtml
+++ b/trab4bim/src/main/webapp/template/header.xhtml
@@ -12,7 +12,7 @@
 			<p:menuitem value="Consulta" icon="ui-icon-document" url="consultarPessoa.xhtml"/>
 			<p:menuitem value="Consulta por Carousel" icon="ui-icon-document" url="consultarPessoaCarousel.xhtml"/>
 			<p:menuitem value="Gráfico tipo Pessoa" icon="ui-icon-document" url="graficoPizzaPessoa.xhtml" />
-			<p:menuitem value="Exportar XML Pessoa" icon="ui-icon-document" />
+			<p:menuitem value="Exportar XML Pessoa" icon="ui-icon-document" url="exportarRegistrosXml.xhtml" />
  
  
 		<f:facet name="options">            
